# fbxcel-dom

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT.txt  README.md
examples/: list-objects.rs  load-dom.rs  objects-hierarchy.rs  simple-load.rs
src/: any.rs  lib.rs  v7400.rs
src/any/: error.rs
src/v7400/: axis.rs  connection.rs  data.rs  definition.rs  definitions_cache.rs  document.rs  error.rs  global_settings.rs  object.rs  object_properties.rs  objects_cache.rs  properties.rs  property.rs
src/v7400/connection/: cache.rs
src/v7400/data/: material.rs  mesh.rs  texture.rs
src/v7400/data/mesh/: control_point.rs  layer.rs  polygon_vertex_index.rs  triangle_vertex_index.rs
src/v7400/data/mesh/layer/: binormal.rs  color.rs  common.rs  edge_crease.rs  hole.rs  material.rs  normal.rs  polygon_group.rs  smoothing.rs  tangent.rs  texture.rs  user_data.rs  uv.rs  vertex_crease.rs  visibility.rs
src/v7400/data/texture/: primitive.rs
src/v7400/document/: global_settings.rs  load.rs  loader.rs  meta.rs
src/v7400/document/meta/: creation_timestamp.rs
src/v7400/error/: connection.rs
src/v7400/object/: cache.rs  deformer.rs  geometry.rs  macros.rs  material.rs  meta.rs  model.rs  scene.rs  subdeformer.rs  texture.rs  typed.rs  video.rs
src/v7400/object/deformer/: blendshape.rs  blendshapechannel.rs  cluster.rs  skin.rs
src/v7400/object/geometry/: mesh.rs  shape.rs
src/v7400/object/material/: nosubclass.rs
src/v7400/object/model/: limb_node.rs  mesh.rs  null.rs
src/v7400/object/property/: loaders.rs  node.rs  object_props.rs  properties.rs
src/v7400/object/property/loaders/: array.rs  binstr.rs  mint.rs  primitive.rs  rgb.rs  strict_primitive.rs
src/v7400/object/subdeformer/: cluster.rs
src/v7400/object/texture/: nosubclass.rs
src/v7400/object/video/: clip.rs
src/v7400/property/: load.rs  loaders.rs
src/v7400/property/loaders/: array.rs  binstr.rs  primitive.rs
