[package]
name = "fbxcel-dom"
version = "0.0.10"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "FBX DOM library"
repository = "https://github.com/lo48576/fbxcel-dom"
keywords = ["FBX", "3D", "model"]
categories = ["rendering::data-formats"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "lo48576/fbxcel-dom" }
