[package]
name = "fbxcel-dom"
version = "0.0.10"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "FBX DOM library"
repository = "https://github.com/lo48576/fbxcel-dom"
keywords = ["FBX", "3D", "model"]
categories = ["rendering::data-formats"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
anyhow = "1.0.40"
#fbxcel = { version = "0.7.0", features = ["tree"] }
fbxcel = { git = "https://github.com/lo48576/fbxcel.git", rev = "e704f7075f47f3732d2f0cdc04d523b65e212325", features = ["tree"] }
log = "0.4.14"
thiserror = "1.0.24"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "lo48576/fbxcel-dom" }
