[package]
name = "fbxcel-dom"
version = "0.0.8"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "FBX DOM library"
repository = "https://github.com/lo48576/fbxcel-dom"
keywords = ["FBX", "3D", "model"]
categories = ["rendering::data-formats"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
anyhow = "1.0.22"
fbxcel = { version = "0.8.1", features = ["tree"] }
log = "0.4.4"
mint = "0.5"
rgb = "0.8.12"
string-interner = { version = "0.14.0", default-features = false, features = ["backends", "inline-more", "std"] }

[dev-dependencies]
env_logger = "0.9.0"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "lo48576/fbxcel-dom" }
